attempt to fix additional matches redis issue